tests/NormalTests/paczka1/small_fuzzy/96567150.err
Error in line 1: JQI9Aijvo2 S274 14,2
Error in line 6: S705 S759 96,1
